    always work). (Johannes)
  . Fixed bug #61194 (PDO should export compression flag with myslqnd).
    (Johannes)

- Phar
  . Fixed bug #61184 (Phar::webPhar() generates headers with trailing NUL
    bytes). (Nikita Popov)

- Reflection:
  . Fixed bug #60968 (Late static binding doesn't work with 
    ReflectionMethod::invokeArgs()). (Laruence)

- Standard:
  . Fixed memory leak in substr_replace. (Pierrick)
  . Make max_file_uploads ini directive settable outside of php.ini (Rasmus)
  . Fixed bug #60106 (stream_socket_server silently truncates long unix socket
    paths). (Ilia)

- XMLRPC:
  . Fixed bug #61264 (xmlrpc_parse_method_descriptions leaks temporary
    variable). (Nikita Popov)
  . Fixed bug #61097 (Memory leak in xmlrpc functions copying zvals). (Nikita
    Popov)

- Zlib:
  . Fixed bug #61306 (initialization of global inappropriate for ZTS). (Gustavo)
  . Fixed bug #61287 (A particular string fails to decompress). (Mike)
  . Fixed bug #61139 (gzopen leaks when specifying invalid mode). (Nikita Popov)

01 Mar 2012, PHP 5.4.0 

- Installation:
  . autoconf 2.59+ is now supported (and required) for generating the
    configure script with ./buildconf. Autoconf 2.60+ is desirable
    otherwise the configure help order may be incorrect.  (Rasmus, Chris Jones)

- Removed legacy features:
  . break/continue $var syntax. (Dmitry)
  . Safe mode and all related php.ini options. (Kalle)
  . register_globals and register_long_arrays php.ini options. (Kalle)
  . import_request_variables(). (Kalle)
  . allow_call_time_pass_reference. (Pierrick)
  . define_syslog_variables php.ini option and its associated function. (Kalle)
  . highlight.bg php.ini option. (Kalle)
  . safe_mode, safe_mode_gid, safe_mode_include_dir,
    safe_mode_exec_dir, safe_mode_allowed_env_vars and
    safe_mode_protected_env_vars php.ini options.
  . zend.ze1_compatibility_mode php.ini option.
  . Session bug compatibility mode (session.bug_compat_42 and